# pyri-cli

./: README.md  pyproject.toml  setup.py
src/pyri/cli/: __main__.py  dev.py  pyodide_repodata.json  pyri_webui_install.py
