[project]

name = "pyri-cli"
version = "0.3.0"
description = "PyRI Teach Pendant CLI"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["pyodide", "pyri-project", "pyri-util-package", "robotics"]
authors = [
    {name = "John Wason", email = "wason@wasontech.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering"
]

dependencies = [
    'pyri-common',
    'RobotRaconteur',
    'setuptools',
    'pip',
    'toml',
    'pyyaml',
    'appdirs',
    'pkginfo'
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[project.urls]
homepage="http://pyri.tech"
repository="https://github.com/pyri-project/pyri-cli"

[project.scripts]
pyri-cli = "pyri.cli.__main__:main"

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
    'toml',
]

[tool.setuptools.package-data]
'pyri.cli' = ['*.json']